--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="twitter:site" content="@Nanasu7">
   <meta property="og:url" content="https://nanasunana.github.io/">
   <meta property="og:title" content="Udonarium with Fly">
-  <meta property="og:description" content="ユドナリウム（Udonarium）の私家改造版、高度とかチャットテキストの色とか立ち絵（ユドナリウムだとキャラクターの画像と紛らわしいのでスタンドと呼称）とか。">
+  <meta property="og:description" content="유드나리움（Udonarium）의 NanasuNANA님의 개조판, 고도나 채팅 텍스트의 색이나 스탠딩(유드나리움은 캐릭터의 이미지와 혼동되기 때문에 스탠딩이라고 호칭)이라던가.">
   <meta property="og:image" content="https://nanasunana.github.io/card.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
